fix: correct MySQL8Dialect

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.datasource.password = 1q2w3e4r5t@@
 
 # hibernate
 # The SQL dialect makes Hibernate generater better SQL for the chosen db
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQl8Dialect
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 
 # Hibernate ddl auto (create, create-drop, validate, update, none)
 spring.jpa.hibernate.ddl-auto = update
